sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var a = 0
  var b = getValueCount() - 2
  var t = false
  do {
  t = true
  for (i <- a to b) {
    if (isSmaller(i+1,i)){
      
      t = false
      swap(i,i+1)}
    
  	
		if (b to a)){
      t = false
      swap(getValueCount()-1-i,getValueCount()-2-i)}
    
  }
    


    
  
} while (t == false)
}